# kubechaos

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.MD  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
kubechaos/: chaos.py  cli.py  safety.py
tests/: test_chaos.py  test_safety.py
