[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubechaos"
version = "0.1.0"
description = "A CLI chaos engineering toolkit for Kubernetes"
readme = "README.MD"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Shruti Shrivas", email = "Shruti.shrivas2141@gmail.com"}
]
keywords = ["kubernetes", "chaos-engineering", "sre", "devops"]
dependencies = [
    "kubernetes>=28.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
kubechaos = "kubechaos.cli:main"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
